src/test/resources/org/nest/nestml/_cocos/invalid/restrictUseOfShapes.nestml
neuron invalidShapes:
  state:
    StateVar real
  end

  input:
      spikeInh   <- inhibitory spike
      spikeExc   <- excitatory spike
      currents <- current
  end

  parameters:    
  end

  output: spike

  equations:
    shape testShape = 1.5 *t
    testShape' = 10 /s           #Error
  end

  internals:
  end

  update:
    StateVar = testShape + 10       #Error
    testShape = 3                   #Error
    foo(testShape)                  #Error
    testShape += 3                  #Error
  end

  function foo(tt real):
  end
end
